# rectik

./: .gitignore  README.md  docker-compose.yml
dbt_rectik/: dbt_project.yml
dbt_rectik/models/: filtered_user_interaction.sql  filtered_video_interaction.sql  filtered_video_statistic.sql  joined_user.sql  joined_user_interaction.sql  joined_video.sql
dbt_rectik/models/staging/: schema.yml  user_interaction_staging.sql  user_onehot_features_staging.sql  user_staging.sql  (+4 more)
ingestion/: Dockerfile  metaflow_config.yml  requirements.txt  script.sh
ingestion/flows/: data_ingestion_flow.py  test.py
postgres/: alembic.ini  requirements.txt
postgres/migration/: env.py
postgres/models/: __init__.py  base.py  user.py  user_engagement.py  user_interaction.py  user_onehot_features.py  video.py  video_caption.py  video_interaction.py  video_statistic.py  video_tags.py
recommender/: pyproject.toml
recommender/recommender/data_collector/: base.py
recommender/recommender/embedding/: base.py  bert.py  clip.py
recommender/recommender/evaluation/: evaluate.py
recommender/recommender/models/: BaseModel.py
recommender/recommender/training/: dataset.py
recommender/recommender/training/model/: config.py  mmssl.py  model.py
recommender/recommender/training/utils/: norm.py
rectik/: Dockerfile  constant.py  data_flow.py  decorators.py  query_string.py  requirements.txt  serve_flow.py  train_flow.py  workflows.py
rectik/artifacts/: video_embeddings.parquet
rectik/faiss_index/: index.faiss
rectik/feature_entity/: user_features.py  video_features.py
(+69 files in other folders)
