[tool.poetry]
name = "recommender"
version = "0.1.0"
description = ""
authors = ["LongBaoCoder2 <longbao.it@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.1"
numpy = "^2.1.1"
scipy = "^1.14.1"
sentence-transformers="^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
